# rca

./: .env.example  .gitignore  Dockerfile  Dockerfile.ui  Dockerfile.vllm  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-gcp.yml
app/: config.py  main.py  schema.py
app/services/: concierge.py  dispatcher.py  librarian.py
deploy/: cloudrun-api.yaml  cloudrun-ui.yaml  cloudsql-init.sql  gcp-setup.sh  pod.env  pod.yaml  pod_full.yaml
docs/: api.md  architecture.md  deployment.md  evaluation_report.md  inference.md  models.md
scripts/: backfill_tiers.py  check_deps.sh  db_init.sql  deploy.sh  deploy_native_vllm.sh  evaluate.py  evaluate_concierge.py  evaluate_pipeline.py  finetune.py  finetune_concierge.py  generate_concierge_dataset.py  generate_concierge_dataset_mac.py  generate_dataset.py  generate_dataset_bedrock.py  generate_dispatcher_dataset_v2.py  ingest.py  ingest_bedrock.py  patch_tokenizers.py  push_to_hub.py  setup_gpu_machine.sh  train_concierge.py  train_dispatcher.py
tests/: conftest.py  test_api.py  test_concierge.py  test_dispatcher.py  test_evaluate.py  test_finetune.py  test_generate_dataset.py  test_patch_tokenizers.py  test_pipeline.py  test_schema.py
ui/: app.py
