[project]
name = "rca"
version = "0.1.0"
description = "Restaurant Concierge Agent — 3-stage LLM inference pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "instructor>=1.3.0",
    "openai>=1.30.0",           # vLLM OpenAI-compatible client
    "anthropic>=0.28.0",        # teacher model for distillation + dataset gen
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "typer>=0.12.0",            # CLI for scripts
    "rich>=13.7.0",             # pretty script output
]

[project.optional-dependencies]
train = [
    "torch>=2.3.0",
    "unsloth>=2024.5",
    "trl>=0.8.6",
    "datasets>=2.19.0",
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
]
serve = [
    "vllm>=0.4.0",               # GPU machine only — requires CUDA
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/test_pipeline.py --ignore=tests/test_finetune.py"
